--- a/visual/style.css
+++ b/visual/style.css
@@ -609,4 +609,43 @@ input[type="button"]:hover {
   width: 100%;
   height: 4vh;
   background-color: #8F63E0;
+  margin-top: -1.8vh;
+}
+
+.disclaimer-text{
+  text-decoration: none;
+  color: black;
+  margin-left: 5vw;
+  top: 25%;
+  position: relative;
+  font-size: 1.8vh;
+  font-weight: 600;
+}
+
+.disclaimer-text2{
+  text-decoration: none;
+  color: black;
+  margin-left: 10vw;
+  top: 25%;
+  position: relative;
+  font-size: 1.8vh;
+  font-weight: 600;
+}
+
+
+.subpromo {
+  width: 100%;
+  height: 4vh;
+  background-color: #1b1b1b;
+  margin-top: -2vh;
+  margin-bottom: 1.8vh;
+}
+
+.subpromo-text {
+  color: white;
+  text-align: center;
+  margin: 0 auto;
+  justify-content: center;
+  position: relative;
+  top: 25%;
 }
