--- a/visual/style.css
+++ b/visual/style.css
@@ -153,7 +153,10 @@
   margin-left: 0.8vw;
   height: 5vh;
   margin-top: 1vh;
-  width: 11.8vw;
+  width: 12vw;
+  justify-content: center;
+  text-align: center;
+  position: relative;
 }
 
 .left-side h3 {
