--- a/visual/style.css
+++ b/visual/style.css
@@ -39,7 +39,7 @@
   right: 0;
   margin: 0;
   bottom: 0;
-  background-color: #ba01ff;
+  background-color: #0fb8b8;
   color: #ccc;
   z-index: -1;
   transform: skewX(-35deg);
@@ -109,7 +109,7 @@
 
 .body-index {
   margin: 0;
-  background: linear-gradient(72deg, #ba01ff, black 99%);
+  background: #f5f2d0;
   font-family: Arial;
 
 }
@@ -120,7 +120,7 @@
   padding: 0;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(72deg, aqua, black 99%);
+  background: #f5f2d0;
 }
 
 .rigth-side {
@@ -146,7 +146,7 @@
 .left-side a {
   text-decoration: none;
   color: black;
-  background-color: rgb(15, 184, 184);
+  background-color: #0fb8b8;
   width: fit-content;
   padding: 15px 20px;
   border-radius: 10px;
@@ -186,7 +186,7 @@
   margin-left: 1vw;
   font-weight: 500;
   font-size: 20px;
-  opacity: 60%;
+  opacity: 80%;
   margin-top: -1vh;
 }
 
@@ -201,7 +201,7 @@
 .content-vans {
   height: calc(100vh - 80px);
   width: 100%;
-  background-color: linear-gradient(72deg, aqua, black 99%);
+  background-color: #f5f2d0;
   justify-content: space-evenly;
   align-items: center;
   display: flex;
@@ -325,7 +325,7 @@ input[type="button"] {
 }
 
 input[type="button"]:hover {
-  background-color: rgb(15, 184, 184);
+  background-color: #0fb8b8;
 }
 
 .buttons {
@@ -337,7 +337,7 @@ input[type="button"]:hover {
 }
 
 .tamanho button:hover {
-  background-color: rgb(15, 184, 184);
+  background-color: #0fb8b8;
 }
 
 * {
@@ -440,29 +440,19 @@ input[type="button"]:hover {
 
 .img-barra {
   align-content: center;
-  display: block;
   margin: auto;
+  justify-content: center;
+  position: relative;
+  display: flex;
 }
 
 .mid-box {
   border: 5px;
-  background: gray;
+  background: transparent;
   height: 600px;
   box-shadow: black;
   position: relative;
   margin-top: 1.8vh;
-  box-shadow: black 0px 20px 30px -10px;
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(72deg, white, black 99%);
-    opacity: 50%;
-  }
 }
 
 .text-box {
@@ -488,7 +478,8 @@ input[type="button"]:hover {
     width: 15vw;
     border-radius: 50%;
     transition: 0.3s linear;
-    box-shadow: black 0px 20px 30px -10px;
+
+    border: black solid 2px;
   }
 }
 
@@ -582,14 +573,14 @@ input[type="button"]:hover {
 
 .parcela-txt {
   font-size: 2vh;
-  color: rgb(15, 184, 184);
+  color: #0fb8b8;
   font-weight: 500;
   margin-left: 15.7vw;
 }
 
 .parcela-txt2 {
   font-size: 2.2vh;
-  color: rgb(15, 184, 184);
+  color: #0fb8b8;
   font-weight: bold;
   margin-left: 11vw;
   margin-bottom: 2.5vh;
@@ -601,11 +592,7 @@ input[type="button"]:hover {
   position: relative;
   margin-top: -4.6vh;
   box-shadow: black 0px 20px 30px -10px;
-  transition: 0.3s linear;
-}
 
-.mid-boxvans:hover {
-  transform: scale(1.03);
 }
 
 .disclaimer {
