--- a/visual/style.css
+++ b/visual/style.css
@@ -344,7 +344,7 @@ input[type="button"]:hover {
   box-sizing: border-box;
 }
 
-.slideshow-conteiner {
+.banner-img {
   max-width: 1920px;
   position: relative;
   margin: auto;
@@ -598,7 +598,7 @@ input[type="button"]:hover {
 .disclaimer {
   width: 100%;
   height: 4vh;
-  background-color: #8F63E0;
+  background-color: #079494;
   margin-top: -1.8vh;
 }
 
@@ -638,4 +638,57 @@ input[type="button"]:hover {
   justify-content: center;
   position: relative;
   top: 25%;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+section{
+  position: relative;
+  height: 850px;
+  width: 70%;
+  display: flex;
+  align-items: center;
+}
+
+.swiper{
+  width: 1300px;
+}
+
+.card{
+  position: relative;
+  border-radius: 20px;
+  margin: 20px 0;
+}
+
+section .card .image{
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  padding: 10px;
+}
+
+section .card .image img{
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+  transition: all 0.4s;
+  opacity: 60%;
+}
+
+section .card .image img:hover{
+  transform: scale(1.07);
+  opacity: 100%;
+}
+
+.swiper-pagination{
+  position: absolute;
+}
+
+.swiper-button-next, .swipper-button-prev{
+  opacity: 0.7;
+  color: #ccc;
 }
