--- a/visual/style.css
+++ b/visual/style.css
@@ -663,7 +663,7 @@ input[type="button"]:hover {
 
 .container-tenis{
   width: 100%;
-  height: 100vh;
+  height: 85vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -680,11 +680,19 @@ input[type="button"]:hover {
   overflow-y: hidden;
   margin-left: 30px;
   box-sizing: 0 60px 40px -30px rgba(0, 0, 0, 0.27);
+  box-shadow: black 0px 20px 30px -10px;
 }
 
 .card-img{
   position: absolute;
   width: 260px;
+  filter: drop-shadow(5px 10px 15px rgba(8,9,13,.4));
+}
+
+.card-imgj{
+  position: absolute;
+  width: 235px;
+  margin-bottom: 1vh;
   filter: drop-shadow(5px 10px 15px rgba(8,9,13,.4));
 }
 
@@ -694,22 +702,28 @@ input[type="button"]:hover {
 }
 
 .card-title{
-  font-size: 1.5rem;
+  font-size: 2vh;
+  margin-top: 0.5vh;
   color: #06212c;
-  margin-bottom: .5rem;
+  margin-bottom: 1vh;
+  position: relative;
+  text-align: center;
 }
 
 .card-preco{
   display: inline-block;
   font-size: 1.25rem;
   font-weight: 500;
-  margin-bottom: 1.25rem;
+  margin-bottom: 2vh;
+  margin-top: -0.5vh;
 }
 
 .card-description{
-  font-size: .875rem;
+  font-size: 1.5vh;
   text-align: initial;
-  margin-bottom: 1.25rem;
+  margin-top: -1.5vh;
+  position: relative;
+  text-align: center;
 }
 
 .card-button{
@@ -720,17 +734,18 @@ input[type="button"]:hover {
   border-radius: .5rem;
   border: 1px solid black;
   font-weight: 600;
-  transition: 1s;
+  transition: 0.8s;
   position: relative;
   left: 25%;
   margin-top: 25%;
 }
 
 .card-button:hover{
-  background-color: #10536d;
+  background-color: #079494;
   color: black;
 }
 .card-img,
+.card-imgj,
 .card-data,
 .card-title,
 .card-preco,
@@ -743,20 +758,42 @@ input[type="button"]:hover {
   margin-top: 4vh;
 }
 
+.card:hover .card-imgj{
+  transform: translate(-1.6rem, -9.5rem);
+  margin-top: 4vh;
+}
+
 .card:hover .card-data{
-  transform: translateY(4.8rem);
+  transform: translateY(5rem);
+  margin-top: 1.5vh;
 }
 
 .card:hover .card-title{
-  transform: translateX(-2.3rem);
-  margin-bottom: 0;
+  transform: translateX(-0rem);
+  margin-bottom: 0; 
+  position: relative;
 }
 
 .card:hover .card-preco{
-  transform: translateX(-6.8rem);
+  transform: translateX(-0rem);
+  margin-top: 2vh;
+  color: green;
 }
 
 .card:hover .card-description .card:hover .card-button{
   transition-delay: .2s;
   opacity: 1;
+}
+
+.card:hover .card-description{
+  margin-top: 0.5vh;
+  margin-bottom: -4vh;
+}
+
+.adidasimgban {
+  filter: blur(3px);
+}
+
+.adidas-page{
+  box-shadow: black 0px 20px 30px -10px;
 }
