--- a/visual/style.css
+++ b/visual/style.css
@@ -131,14 +131,15 @@
 }
 
 .txt-btn {
-  font-size: 1vw;
+  font-size: 1.5vh;
   font-weight: bold;
+  margin-top: 0vh;
 }
 
 .vanslogo {
-  width: 10vw;
+  width: 20vw;
   height: 30vh;
-  margin-top: -2.3vh;
+  margin-top: -5.8vh;
   margin-left: -1.1vw;
 }
 
@@ -147,12 +148,12 @@
   color: black;
   background-color: #0fb8b8;
   width: fit-content;
-  padding: 15px 20px;
+  padding: 10px 20px;
   border-radius: 10px;
-  margin-left: 0.8vw;
+  margin-left: 1vw;
   height: 5vh;
-  margin-top: 1vh;
-  width: 12vw;
+  margin-top: 0vh;
+  width: 10vw;
   justify-content: center;
   text-align: center;
   position: relative;
@@ -311,7 +312,7 @@ input[type="button"] {
   margin-top: 0%;
   border: #141414 solid 2px;
   outline: none;
-  width: 2.5vw;
+  width: 4vw;
   height: 5vh;
   background-color: white;
   color: black;
@@ -330,6 +331,7 @@ input[type="button"]:hover {
 .buttons {
   height: 80%;
 }
+
 
 .tamanho {
   margin-top: 2vh;
@@ -574,14 +576,14 @@ input[type="button"]:hover {
   font-size: 2vh;
   color: #0fb8b8;
   font-weight: 500;
-  margin-left: 15.7vw;
+  margin-left: 14vw;
 }
 
 .parcela-txt2 {
   font-size: 2.2vh;
   color: #0fb8b8;
   font-weight: bold;
-  margin-left: 11vw;
+  margin-left: 14vw;
   margin-bottom: 2.5vh;
 }
 
