--- a/visual/vans.ejs
+++ b/visual/vans.ejs
@@ -2,106 +2,118 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vans</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+ 
+  <%- include('head.html') %>
+
 </head>
 
 <body class="body-vans">
 
-  <header>
+  <%- include('header.html') %>
 
-    <nav class="menu">
-      <div class="logo">
-        <img src="logo.ico" width="140px" height="140px" />
-    </div>
-      <ul>
-        <li><a href="/" title="home">Sneaker House</a></li>
-        <li><a href="/sobre" title="sobre">Sobre nós</a></li>
-        <li><a href="/nike" title="nike">Nike</a></li>
-        <li><a href="/adidas" title="adidas">Adidas</a></li>
-        <li class="active"><a href="/vans" title="vans">Vans</a></li>
-      </ul>
-
-    </nav>
-
-  </header>
+  <div class="subpromo">
+    <p class="subpromo-text">
+      Use o cupom <strong>PRIMEIRA,</strong> e garanta 10% OFF em produtos acima de <strong>R$ 499,90.</strong>
+    </p>
+  </div>
 
   <aside>
 
   </aside>
 
+
   <main>
+
+    <a href="/beneficios"><img src="./img/Barramenu.png" class="img-barra"></a>
+
     <border>
       <div class="content-vans">
         <div class="left-side">
           <div class="font">
-          <h1></h1>
-          <br>
-          <br>
-          <br>
-          <h3>Marca: Vans</h3>
-          <p>TÊNIS VANS OLD SKOOL</p>
-          <span>R$379,99</span>
-          <br>
-          <a href="">Adicionar ao Carrinho</a>
-        </div>
-        <div class="buttons">
-          <legend>Selecione seu tamanho</legend>
-          <div class="tamanho">
-      
-            <button type="button" class="btn btn-outline-light">38</button>
-         
-          
-            <button type="button" class="btn btn-outline-light">39</button>
-        
-          
-            <button type="button" class="btn btn-outline-light">40</button>
-          
-          <button type="button" class="btn btn-outline-light">41</button>
-          
-          <button type="button" class="btn btn-outline-light">42</button>
-          
-          <button type="button" class="btn btn-outline-light">43</button>
-         
-        </div>
-    </div>
-        </div>
+            <img src="./img/vanslogo.png" class="vanslogo"/>
+            <br>
+            <br>
+            <br>
+            <h3>Marca: Vans</h3>
+            <p>TÊNIS VANS OLD SKOOL</p>
+            <txt class="promo-txt">R$ 499,90 </txt>
+            <txt class="parcela-txt">EM ATÉ</txt>
+            <txt class="parcela-txt2">10X DE R$ 37,99</txt>
+            <span class = "preço"> R$ 379,99</span>
+            <br>
+            <a href="" class="txt-btn">Adicionar ao Carrinho</a>
+          </div>
+          <div class="buttons">
+            <legend>Selecione seu tamanho</legend>
+            <div class="tamanho">
 
-      <section class="slideshow-conteiner-vans">
+              <input type="button" class="btn btn-outline-light" value="38" />
 
-        <div class="slide fade-vans">
-          <img src="./vf1.png" style="width: 100%" class="imgSlide-vans">
+              <input type="button" class="btn btn-outline-light" value="39" />
+
+              <input type="button" class="btn btn-outline-light" value="40" />
+
+              <input type="button" class="btn btn-outline-light" value="41" />
+
+              <input type="button" class="btn btn-outline-light" value="42" />
+
+              <input type="button" class="btn btn-outline-light" value="43" />
+
+            </div>
+          </div>
 
         </div>
 
-        <div class="slide fade-vans">
-          <img src="./vf2.png" style="width: 100%" class="imgSlide-vans">
 
-        </div>
+        <section class="slideshow-conteiner-vans">
 
-        <div class="slide fade-vans">
-          <img src="./vf3.png" style="width: 100%" class="imgSlide-vans">
+          <div class="img-container">
+
+            <div class="slide fade-vans">
+              <img src="./img/vf1.png" style="width: 100%" class="imgSlide-vans">
+
+            </div>
+
+            <div class="slide fade-vans">
+              <img src="./img/vf2.png" style="width: 100%" class="imgSlide-vans">
+
+            </div>
+
+            <div class="slide fade-vans">
+              <img src="./img/vf3.png" style="width: 100%" class="imgSlide-vans">
 
 
-        </div>
+            </div>
+          </div>
 
-        <section style="text-align:center" class="indicator-container">
+          <hr class="linha">
 
-          <span class="indicator-vans" onclick="slideAtual(1)"></span>
-          <span class="indicator-vans" onclick="slideAtual(2)"></span>
-          <span class="indicator-vans" onclick="slideAtual(3)"></span>
+          <section style="text-align:center" class="indicator-container">
+
+            <a class="btnAnterior-vans" onclick="mudarSlide(-1)">&lsaquo;</a>
+            <a class="btnProximo-vans" onclick="mudarSlide(1)">&rsaquo;</a>
+
+            <img class="indicator-vans" src="./img/vf1.png" onclick="slideAtual(1)">
+            <img class="indicator-vans" src="./img/vf2.png" onclick="slideAtual(2)">
+            <img class="indicator-vans" src="./img/vf3.png" onclick="slideAtual(3)">
+
+          </section>
         </section>
-      </section>
 
 
 
       </div>
 
     </border>
+    <div class="mid-boxvans">
+
+    </div>
+    <p>aaaaaaa</p>
+    <p>aaaaaaa</p>
+    <p>aaaaaaa</p>
+    <p>aaaaaaa</p>
   </main>
-  <script src="script.js"></script>
+
 </body>
 
 </html>
