Att banco de dados

--- a/visual/tenisPag.ejs
+++ b/visual/tenisPag.ejs
@@ -63,7 +63,7 @@
             <div class="footer-content">
                 <h3>Navegação</h3>
                  <ul class="list">
-                    <li><a href="">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="">Marcas</a></li>
                     <li><a href="#sobre">Sobre nós</a></li>
                  </ul>
