--- a/visual/style.css
+++ b/visual/style.css
@@ -132,6 +132,7 @@ body{
   border-radius: 0px 0px 35px 35px;
   display: flex;
   justify-content: center;
+  margin-left: -0.1rem;
 }
 
 a#login-button.button.logout.login.w-button {
