--- a/visual/tenisPag.ejs
+++ b/visual/tenisPag.ejs
@@ -47,7 +47,14 @@
   
   <main>
     <div class="container-all">
-
+     <div class="container slider"></div>
+     <button id="prevbutton" src="https://i.ibb.co/593Wrrm/nikee.png" alt="prevbutton"></button> 
+      <div class="container images">
+        <img src="https://i.ibb.co/9vdVrz3/vf1.png" alt="vf1"  class="slider">
+        <img src="https://i.ibb.co/BPH87qT/vf2.png" alt="vf2"" class="slider">
+        <img src="https://i.ibb.co/pd7hZmG/vf3.png" alt="vf3" class="slider">
+      </div>
+      <button id="prevbutton" src="https://i.ibb.co/593Wrrm/nikee.png" alt="nextbutton"></button> 
     </div>
   </main>
   
