--- a/visual/style.css
+++ b/visual/style.css
@@ -639,3 +639,54 @@ a#login-button.button.logout.login.w-button:hover {
   font-size: 16px;
   cursor: pointer;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.containerslider {
+  display: flex;
+  width: 100%;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.containerimages {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 700px;
+}
+
+.slider {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.an {
+  opacity: 1;
+}
+
+#prevbutton, #nextbutton {
+  width: 30px;
+  height: 30px;
+  border-radius: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+#prevbutton img, #nextbutton img {
+  width: 100%;
+  height: 100%;
+}
+
+#prevbutton {
+  transform: rotate(180deg);
+}
