--- a/visual/login.ejs
+++ b/visual/login.ejs
@@ -11,37 +11,9 @@
 
 <body>
 
-  <div class="navbar" id="navbar">
-    <ul class="nav-content">
-      <li class="nav-item"> <a href="#" class="nav-link"> <i class="gg-profile" width="10px" height="10px"> </i> </a>
-      </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Home </a> </li>
-      <li class="nav-item"> <a href="#sobre" class="nav-link"> Sobre nós </a> </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Marcas </a>
-        <ul class="nav-dropdown">
-          <li class="nav-item"> <a href="/tenis" class="nav-link"> Nike </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Jordan </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Vans </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Adidas </a>
-        </ul>
-      </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Contato </a>
-    </ul>
-
-    <div class="login">
-
-      <a id="login-button" ms-hide-element="true" href="#" class="button logout login w-button">Login</a>
-
-    </div>
-  </div>
-
-  <div class="subnav">
-    <div class="search">
-      <form action="#">
-        <input type="text" placeholder=" O que você procura?" name="search">
-      </form>
-    </div>
-  </div>
+  <header>
+    <%- include('../visual/menu.html'); %>
+  </header>
 
   <main>
 
