--- a/visual/registro.ejs
+++ b/visual/registro.ejs
@@ -11,38 +11,10 @@
 
 <body>
 
-  <div class="navbar" id="navbar">
-    <ul class="nav-content">
-      <li class="nav-item"> <a href="#" class="nav-link"> <i class="gg-profile" width="10px" height="10px"> </i> </a>
-      </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Home </a> </li>
-      <li class="nav-item"> <a href="#sobre" class="nav-link"> Sobre nós </a> </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Marcas </a>
-        <ul class="nav-dropdown">
-          <li class="nav-item"> <a href="/tenis" class="nav-link"> Nike </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Jordan </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Vans </a>
-          <li class="nav-item"> <a href="#" class="nav-link"> Adidas </a>
-        </ul>
-      </li>
-      <li class="nav-item"> <a href="#" class="nav-link"> Contato </a>
-    </ul>
-
-    <div class="login">
-
-      <a id="login-button" ms-hide-element="true" href="#" class="button logout login w-button">Login</a>
-
-    </div>
-  </div>
-
-  <div class="subnav">
-    <div class="search">
-      <form action="#">
-        <input type="text" placeholder=" O que você procura?" name="search">
-      </form>
-    </div>
-  </div>
-
+  <header>
+    <%- include('../visual/menu.html'); %>
+  </header>
+  
   <main>
 
     <div class="register-container">
@@ -52,19 +24,19 @@
         <input type="text" name="nome" id="nome" size="50" placeholder="Ex: Suzana Alves de Souza"><br><br>
 
         <label for="cpf">CPF</label>
-        <input type="text" name="cpf" id="cpf" size="50" placeholder="Ex: 899.123.032-04"><br><br>
+        <input type="text" name="cpf" id="cpf" size="50" placeholder="Ex: 899.123.032-04" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" ><br><br>
 
         <label for="endereco">Seu Endereço</label>
         <input type="text" name="endereco" id="endereco" size="50" placeholder="Ex: Rua João Bandini 2051"><br><br>
 
         <label for="email">E-mail</label>
-        <input type="text" name="email" id="email" size="50" placeholder="Ex: suzana.alves@gmail.com"><br><br>
+        <input type="email" name="email" id="email" size="50" placeholder="Ex: suzana.alves@gmail.com"><br><br>
 
         <label for="senha">Senha</label>
         <input type="password" name="senha" id="senha" size="50"><br><br>
 
         <label for="celular">Celular</label>
-        <input type="email" name="celular" id="celular" size="50" placeholder="Ex: +55 (51) 99783-0978"><br><br>
+        <input type="tel" name="celular" id="celular" size="50" placeholder="Ex: +55 (51) 99783-0978"><br><br>
 
         <input type="checkbox" class="termosbtn">Aceito os termos de uso da Sneaker House</input>
 
