--- a/visual/login.ejs
+++ b/visual/login.ejs
@@ -21,14 +21,14 @@
 
       <form action="/" method="post">
 
-        <label for="email">E-mail</label>
-        <input type="text" name="email" id="email" size="50" placeholder="Ex: suzana.alves@gmail.com"><br><br>
+        <label for="email" class="email">E-mail:</label>
+        <input type="text" name="email" id="email" size="50" placeholder="Ex: suzana.alves@gmail.com" class="caixaemail"><br><br>
 
-        <label for="senha">Senha</label>
-        <input type="password" name="senha" id="senha" size="50"><br><br>
+        <label for="senha" class="senha">Senha:</label>
+        <input type="password" name="senha" id="senha" size="50" class="caixasenha"><br><br>
 
-        <input type="submit" value="Login">
-        <a href="/registro" class="noregister-btn">Ainda não tenho uma conta</a>
+        <input type="submit" class="signdone" value="Login">
+        <a href="/registro" class="noaccount">Ainda não tenho uma conta</a>
       </form>
 
     </div>
