--- a/visual/tenisPag.ejs
+++ b/visual/tenisPag.ejs
@@ -1,9 +1,6 @@
-<html>
-<head>
-<link href='https://unpkg.com/css.gg@2.0.0/icons/css/search.css' rel='stylesheet'>
-<link href='https://unpkg.com/css.gg@2.0.0/icons/css/instagram.css' rel='stylesheet'>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+<!DOCTYPE html>
+<html lang="pt-br">
+<%- include('../visual/head.html'); %>
 <body>
   
   <div class="navbar" id="navbar">
