--- a/visual/registro.ejs
+++ b/visual/registro.ejs
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<html>
-
-<head>
-  <link href='https://unpkg.com/css.gg@2.0.0/icons/css/search.css' rel='stylesheet'>
-  <link href='https://unpkg.com/css.gg@2.0.0/icons/css/instagram.css' rel='stylesheet'>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
+<%- include('../visual/head.html'); %>
 <body>
 
   <header>
