--- a/visual/registro.ejs
+++ b/visual/registro.ejs
@@ -16,7 +16,7 @@
         <input type="text" name="nome" id="nome" size="50" placeholder="Ex: Suzana Alves de Souza"><br><br>
 
         <label for="cpf">CPF</label>
-        <input type="text" name="cpf" id="cpf" size="50" placeholder="Ex: 899.123.032-04" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" ><br><br>
+        <input type="text" name="cpf" id="cpf" size="50" placeholder="Ex: 899.123.032-04"><br><br>
 
         <label for="endereco">Seu Endereço</label>
         <input type="text" name="endereco" id="endereco" size="50" placeholder="Ex: Rua João Bandini 2051"><br><br>
