--- a/visual/clientelista.ejs
+++ b/visual/clientelista.ejs
@@ -8,34 +8,37 @@
   </header>
 
   <main>
-<div class="lista-usuarios">
-    <h1>Usuários cadastrados</h1>
-    <hr>
-    <table border="1" cellpadding="0" cellspacing="0">
-      <tr>
-          <th>Nome</th>
-          <th>CPF</th>
-          <th>Endereço</th>
-          <th>Email</th>
-          <th>Senha</th>
-          <th>Celular</th>
-      </tr>
-      <%
-      Cliente.forEach((c, index) => {
-      %>
-      <tr>
-          <td><%= c.nome %></td>
-          <td><%= c.cpf %></td>
-          <td><%= c.endereco %></td>
-          <td><%= c.email %></td>
-          <td><%= c.senha %></td>
-          <td><%= c.celular %></td>
-      </tr>
-      <%
-      })
-      %>
-  </table>
-</div>
+
+    <div class="usuarios">
+      <div class="usuarios-title">
+        Usuários Cadastrados
+      </div>
+      <div class="links-usuarios">
+        <a href="/registro">Cadastrar usuário manualmente</a>
+      </div>
+      <div class="usuarios-description">
+        <table border="1" cellpadding="0" cellspacing="0" class="table-usuarios">
+          <tr>
+              <th>Nome</th>
+              <th>CPF</th>
+              <th>Endereço</th>
+              <th>Email</th>
+              <th>Senha</th>
+              <th>Celular</th>
+          </tr>
+          <% cliente.forEach((c, index) => { %>
+          <tr>
+              <td><%= c.Nome %></td>
+              <td><%= c.CPF %></td>
+              <td><%= c.Endereco %></td>
+              <td><%= c.Email %></td>
+              <td><%= c.Senha %></td>
+              <td><%= c.Celular %></td>
+          </tr>
+          <% }) %>
+      </table>
+      </div>
+    </div>
   </main>
 
     <%- include('../visual/footer.html'); %>
