--- a/visual/style.css
+++ b/visual/style.css
@@ -711,3 +711,38 @@ a#login-button.button.logout.login.w-button:hover {
     height: 2rem;
   }
 
+  .table-usuarios {
+    border: #141414 px solid;
+    width: 80rem;
+    text-align: center;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 25rem;
+    margin-top: auto;
+  }
+
+  .usuarios {
+    margin-top: 5%;
+    font-family: Poppins;
+    color: black;
+    font-size: 1.1rem;
+  }
+
+  .links-usuarios{
+    color: black;
+    text-decoration: none;
+    font-size: 1.3rem;
+    margin-left: 19.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .usuarios-title{
+    position: relative;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 6rem;
+    font-size: 2rem;
+  }
+  
